--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "dev-hosted": "vite --mode prod",
     "build": "tsc && vite build",
     "build-hosted": "tsc && vite build --mode prod",
+    "vercel-build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest"
